--- a/index.css
+++ b/index.css
@@ -207,14 +207,25 @@ background: linear-gradient(90deg, rgba(252, 203, 144, 0.44) 0%, rgba(255, 154, 
     height: 1000px;
     width: 1515px;
     display: flex;
-    border: 2px solid red;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
+}
+.upcoll{
+    display: flex;
+    flex-direction: column;
+    height: 30%;
+    width: 1300px;
+    align-items: center;
+    justify-content: space-around;
 }
 
 
 .colc1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     color: #000;
     font-family: Roboto;
     font-size: 16px;
@@ -225,9 +236,9 @@ background: linear-gradient(90deg, rgba(252, 203, 144, 0.44) 0%, rgba(255, 154, 
 .colc2{
     color: #000;
     font-family: Roboto;
-    font-size: 24px;
+    font-size: 30px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 1000;
     line-height: 25px; /* 104.167% */
 }
 .colc3{
@@ -237,6 +248,7 @@ background: linear-gradient(90deg, rgba(252, 203, 144, 0.44) 0%, rgba(255, 154, 
     justify-content: space-around;
 }
 .colc3 button{
+    
     color: #4F5665;
     font-family: Roboto;
     font-size: 16px;
@@ -256,4 +268,63 @@ background: linear-gradient(90deg, rgba(252, 203, 144, 0.44) 0%, rgba(255, 154, 
     background: linear-gradient(180deg, rgba(255, 81, 81, 0.50) 0%, #FF5E3A 100%);
 
     color: white;
+}
+.colc4{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+
+    width: 100%;
+    height: 50%;
+
+
+}
+
+.cardcolc{
+    display: flex;
+    flex-direction: column;
+    width: 380px;
+    height: 429.162px;
+    flex-shrink: 0;
+    border-radius: 25px;
+    box-shadow: 0px 8px 10px 0px rgba(0, 0, 0, 0.05);
+    
+}
+
+.cardcolcleft{
+    display:flex
+
+}
+.cardcolcright{
+    display: flex;
+    align-items: center;
+}
+
+.cardcolc h3{
+    color: #000;
+    font-family: Roboto;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.cardcolc button{
+    color: #FFF;
+    font-family: Roboto;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.cardcolcimg{
+
+    background: linear-gradient(180deg, rgba(252, 203, 144, 0.44) 0%, rgba(255, 154, 158, 0.38) 100%);
+    border-radius: 25px 25px 0px 0px ;
+}
+.collfly{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+
 }
